[project]
name = "yoga-python"
version = "0.1.1"
description = "Python binding for Facebook Yoga layout engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/yoga"]
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--verbose", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/yoga"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "PL",  # pylint
]
ignore = [
    "E501",     # Line length
    "PLR0913",  # Too many arguments
    "PLR0912",  # Too many branches
    "PLR2004",  # Magic value
    "N802",     # Function names should be lowercase
    "N806",     # Argument should be lowercase in function
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["F401", "I001", "PLR0915", "E712", "N803", "PLW1641", "F811", "PLR0911", "PLW0177", "SIM201", "SIM202", "B905", "SIM108", "PLC0415", "UP035", "B007", "F841", "PLR0124", "E711"]
"tests/archive/*.py" = ["F401", "I001", "PLR0915", "E712", "N803", "PLW1641", "F811", "PLR0913"]
"src/yoga/__init__.py" = ["F401", "I001", "SIM105"]
"src/yoga/__init__.pyi" = ["N815"]
"src/yoga/value.py" = ["I001", "PLW1641"]
"tests/conftest.py" = ["F401", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
