[project]
name = "yoga-python"
version = "0.1.5"
description = "Python bindings for Facebook Yoga layout engine (CSS Flexbox)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []
keywords = ["yoga", "flexbox", "layout", "css", "react-native"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/banditburai/yoga-python"
Repository = "https://github.com/banditburai/yoga-python"
Issues = "https://github.com/banditburai/yoga-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "pyright>=1.1.408",
]

[build-system]
requires = ["scikit-build-core>=0.5", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/yoga"]
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--verbose", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/yoga"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "PL",  # pylint
]
ignore = [
    "E501",     # Line length
    "PLR0913",  # Too many arguments
    "PLR0912",  # Too many branches
    "PLR2004",  # Magic value
    "N802",     # Function names should be lowercase
    "N806",     # Argument should be lowercase in function
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["F401", "I001", "PLR0915", "E712", "N803", "PLW1641", "F811", "PLR0911", "PLW0177", "SIM201", "SIM202", "B905", "SIM108", "PLC0415", "UP035", "B007", "F841", "PLR0124", "E711"]
"tests/archive/*.py" = ["F401", "I001", "PLR0915", "E712", "N803", "PLW1641", "F811", "PLR0913"]
"src/yoga/__init__.py" = ["F401", "I001", "SIM105"]
"src/yoga/__init__.pyi" = ["N815"]
"tests/conftest.py" = ["F401", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]
